fix html scroll and adaptive on small screen

--- a/app/ui/code/code.module.scss
+++ b/app/ui/code/code.module.scss
@@ -1,7 +1,7 @@
 .code {
   margin-bottom: 20px;
-  max-width: 100%;
-  width: 100%;
+  max-width: 90vw;
+  //width: 100%;
   display: block;
 
   & > pre {
